# parametrized

./: Cargo.toml  README.md  lib.rs
macro/: Cargo.toml  generator.rs  lib.rs
src/: lib.rs  type_argument.rs
tests/: flatten_bug.rs  recursive.rs  test.rs  test_enum.rs
