[package]
name = "parametrized"
description = "Supply useful iterating methods for user-defined types which are parametrized by type parameters"
version = "0.1.4"
repository = "https://github.com/yasuo-ozu/parametrized"
edition = "2021"
categories = ["data-structures", "no-std::no-alloc", "rust-patterns"]
license = "MIT"

[lib]
path = "lib.rs"

[features]
large-tuples = []

[dependencies]
parametrized-macro = { version = "0.1.4", path = "macro" }
sumtype = "0.2.2"

[workspace]
members = [".", "macro"]
resolver = "2"
