[package]
name = "parametrized-macro"
description = "Supply useful iterating methods for user-defined types which are parametrized by type parameters"
version = "0.1.3"
repository = "https://github.com/yasuo-ozu/parametrized"
edition = "2021"
categories = ["data-structures", "no-std::no-alloc", "rust-patterns"]
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0"
template-quote = "0.4"
proc-macro-error = "1.0"

[dependencies.syn]
version = "2.0"
features = [ "full", "derive", "printing", "extra-traits", "visit-mut"]
